start splitting packages